# Mandlebrot-Set-SDL

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
